feat: update SparkHDFSPreprocess to process all 45 files across 15 pairs and 3 timeframes